--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
 		</div>
 		<div class="loginButton">
 			<a href="/auth/linkedin">
-				<img id="loginBtnImg" src="/img/linkedin.png" alt="Sign-In with Linkedin">
+				<img id="loginBtnImg" src="/img/linkedinAuth.png" alt="Sign-In with Linkedin">
 			</a>
 		</div>
 	</div>
