--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,66 +19,66 @@
 				<img id="loginBtnImg" src="/img/linkedinAuth.png" alt="Sign-In with Linkedin">
 			</a>
 		</div>
+		<div class="userDiv">
+			<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
+			<button onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Register</button>
+
+			<div id="id01" class="modal">
+
+				<form class="modal-content animate" action="/userLogin" method="post">
+					<div class="imgcontainer">
+						<span onclick="document.getElementById('id01').style.display='none'" class="close"
+							title="Close Modal">&times;</span>
+						<img src="/img/default_profilePic.png" alt="Avatar" class="avatar">
+					</div>
+
+					<div class="loginContainer">
+						<label for="uname"><b>Username</b></label>
+						<input type="text" placeholder="Enter Username" name="uname" required>
+
+						<label for="psw"><b>Password</b></label>
+						<input type="password" placeholder="Enter Password" name="psw" required>
+
+						<button type="submit">Login</button>
+					</div>
+
+					<div class="loginContainer" style="background-color:#f1f1f1">
+						<button type="button" onclick="document.getElementById('id01').style.display='none'"
+							class="cancelbtn">Cancel</button>
+					</div>
+				</form>
+			</div>
+
+			<div id="id02" class="modal">
+
+				<form class="modal-content animate" action="/createUser" method="post">
+					<div class="imgcontainer">
+						<span onclick="document.getElementById('id02').style.display='none'" class="close"
+							title="Close Modal">&times;</span>
+						<img src="/img/default_profilePic.png" alt="Avatar" class="avatar">
+					</div>
+
+					<div class="loginContainer">
+						<label for="uname"><b>Username</b></label>
+						<input type="text" placeholder="Enter Username" name="uname" required>
+
+						<label for="fname"><b>Full name</b></label>
+						<input type="text" placeholder="Enter Username" name="fname" required>
+
+						<label for="psw"><b>Password</b></label>
+						<input type="password" placeholder="Enter Password" name="psw" required>
+
+						<button type="submit">Create</button>
+					</div>
+
+					<div class="loginContainer" style="background-color:#f1f1f1">
+						<button type="button" onclick="document.getElementById('id02').style.display='none'"
+							class="cancelbtn">Cancel</button>
+					</div>
+				</form>
+			</div>
+		</div>
 	</div>
-
-	<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
-	<button onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Register</button>
-
-	<div id="id01" class="modal">
-
-		<form class="modal-content animate" action="/userLogin" method="post">
-			<div class="imgcontainer">
-				<span onclick="document.getElementById('id01').style.display='none'" class="close"
-					title="Close Modal">&times;</span>
-				<img src="/img/default_profilePic.png" alt="Avatar" class="avatar">
-			</div>
-
-			<div class="loginContainer">
-				<label for="uname"><b>Username</b></label>
-				<input type="text" placeholder="Enter Username" name="uname" required>
-
-				<label for="psw"><b>Password</b></label>
-				<input type="password" placeholder="Enter Password" name="psw" required>
-
-				<button type="submit">Login</button>
-			</div>
-
-			<div class="loginContainer" style="background-color:#f1f1f1">
-				<button type="button" onclick="document.getElementById('id01').style.display='none'"
-					class="cancelbtn">Cancel</button>
-			</div>
-		</form>
-	</div>
-
-	<div id="id02" class="modal">
-
-		<form class="modal-content animate" action="/createUser" method="post">
-			<div class="imgcontainer">
-				<span onclick="document.getElementById('id02').style.display='none'" class="close"
-					title="Close Modal">&times;</span>
-				<img src="/img/default_profilePic.png" alt="Avatar" class="avatar">
-			</div>
-
-			<div class="loginContainer">
-				<label for="uname"><b>Username</b></label>
-				<input type="text" placeholder="Enter Username" name="uname" required>
-
-				<label for="fname"><b>Full name</b></label>
-				<input type="text" placeholder="Enter Username" name="fname" required>
-
-				<label for="psw"><b>Password</b></label>
-				<input type="password" placeholder="Enter Password" name="psw" required>
-
-				<button type="submit">Create</button>
-			</div>
-
-			<div class="loginContainer" style="background-color:#f1f1f1">
-				<button type="button" onclick="document.getElementById('id02').style.display='none'"
-					class="cancelbtn">Cancel</button>
-			</div>
-		</form>
-	</div>
-
 	<script>
 		// Get the modal
 		var modal = document.getElementById('id01') || document.getElementById('id02');
